# rust-sqlx-decimal-example

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  sqlx_db.sh
migrations/: 20230223235956_create_inventory_table.sql
src/: main.rs
