[package]
name = "rust-sqlx-decimal-example"
version = "0.1.0"
authors = ["Barlog <barlog@tanelorn.li>"]
edition = "2021"

[dependencies]
async-trait="0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default", "env-filter"] }

backtrace = "0.3"

rust_decimal = "1"
rust_decimal_macros = "1"

dotenvy = "0.15"
envy = "0.4"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "migrate", "offline", "postgres", "tls", "decimal", "uuid", "time"
]

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

